# EEternal-RS

./: .gitignore  Cargo.toml  readme.md
src/: attacking.rs  board.rs  lib.rs  main.rs  nnue.rs  rays.rs  search.rs  time_manager.rs  types.rs  uci.rs
src/attacking/: magic_utils.rs  not_magical.rs
src/attacking/magic_utils/: magic_numbers.rs
src/board/: evaluate.rs  generate_moves.rs  is_legal.rs  make_move.rs  parse.rs
src/magic_utils/: generate_tables.rs
src/search/: move_ordering.rs  qsearch.rs  search_types.rs  see.rs
src/types/: base.rs  bitboard.rs  castling.rs  color.rs  hash_keys.rs  move_list.rs  moves.rs  piece.rs  score.rs  square.rs  tt.rs  zobrist.rs
src/utils/: perft.rs
