[package]
name = "eeternal_rs"
version = "0.0.4"
edition = "2024"
authors = ["ECanDo"]

[dependencies]

[build]
rustflags = ["-C", "target-cpu=native"]

[features]
#default = ["embed-nnue", "avx2"]
embed-nnue = []
avx2 = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
#debug-assertions = true
#overflow-checks = true